"Message" = "Message";
"Successfully Registered!" = "Successfully Registered!";
"Error" = "Error";
"No Internet Connection" = "No Internet Connection";
"Web Service Error" = "Web Service Error";
"No Response" = "No Response";
"Loading" = "Loading";
"Password does not match" = "Password does not match";
"Password cannot be empty" = "Password cannot be empty";
"Password must contain a minimum of 6 characters" = "Password must contain a minimum of 6 characters";
"Email cannot be empty" = "Email cannot be empty";
"Confirm Password cannot be empty" = "Confirm Password cannot be empty";
"Email not valid" = "Email not valid";
"You have opted to not receive any notifications" = "You have opted to not receive any notifications";
"Update" = "Update";
"Logged in, Hi " = "Logged in, Hi ";
"Your booking has been saved" = "Your booking has been saved";
"Your booking has passed" = "Your booking has passed";
